fix checkbox on IOS

--- a/source/css/custom.scss
+++ b/source/css/custom.scss
@@ -115,7 +115,6 @@ a:hover {
 }
 
 input[type='checkbox'] {
-  -webkit-appearance: checkbox;
-  -moz-appearance: checkbox;
-  appearance: checkbox;
+  width: auto;
+  flex: 0 0 16px;
 }
